sửa LoaiSan1 -> LoaiSan
111

--- a/QLTT/QLTT/Views/Account/DetailsBill.cshtml
+++ b/QLTT/QLTT/Views/Account/DetailsBill.cshtml
@@ -78,7 +78,7 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td>@Model.PhieuThueSan.San.LoaiSan1.giaThue</td>
+                                                        <td>@Model.PhieuThueSan.San.LoaiSan.giaThue</td>
                                                         <td>@ViewBag.soGioThue</td>
                                                         <td>@ViewBag.tienSan</td>
                                                     </tr>
