--- a/QLTT/QLTT/Areas/Admin/Views/HoaDon/DetailBill.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/HoaDon/DetailBill.cshtml
@@ -82,7 +82,7 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td>@Model.PhieuThueSan.San.LoaiSan1.giaThue</td>
+                                                <td>@Model.PhieuThueSan.San.LoaiSan.giaThue</td>
                                                 <td>@ViewBag.soGioThue</td>
                                                 <td>@ViewBag.tienSan</td>
                                             </tr>
