--- a/QLTT/QLTT/Areas/Admin/Views/HoaDon/CallService.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/HoaDon/CallService.cshtml
@@ -68,7 +68,7 @@
                     <div class="modal fade" id="popup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
-                                @using (@Html.BeginForm("XacNhanGoiDichVu", "Bill"))
+                                @using (@Html.BeginForm("ConfirmService", "HoaDon"))
                                 {
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="exampleModalLabel">Chọn số lượng</h5>
