--- a/QLTT/QLTT/Areas/Admin/Views/Index/ListOfServiceCalled.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/Index/ListOfServiceCalled.cshtml
@@ -51,7 +51,7 @@
                             <td>@item.PhieuThueSan.soGioThue</td>
                             <td><span class="badge badge-danger badge-g">@item.PhieuThueSan.San.TinhTrangSan.mota</span></td>
                             <td>
-                                <a href="@Url.Action("CallService","Bill",new { id = item.maHDTS})" class="btn btn-primary badge-g">Gọi dịch vụ</a>
+                                <a href="@Url.Action("CallService","HoaDon",new { id = item.maHDTS})" class="btn btn-primary badge-g">Gọi dịch vụ</a>
                             </td>
                         </tr>
                     }
