--- a/QLTT/QLTT/Areas/Admin/Views/KhachHang/Details.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/KhachHang/Details.cshtml
@@ -1,58 +1,11 @@
-﻿﻿@model QLTT.Models.KhachHang
-
+﻿@model Composite.BookingInfoComposite
 @{
     ViewBag.Title = "Details";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
-<ol class="breadcrumb">
-    <li class="breadcrumb-item">
-        <a href="@Url.Action("Index","Index")">Admin</a>
-    </li>
-    <li class="breadcrumb-item active">Chi tiết khách hàng</li>
-</ol>
+<h2>Details</h2>
 <div>
-    <dl class="dl-horizontal">
-        <dt>
-            Tài khoản
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.maKH)
-        </dd>
-
-        <dt>
-            Họ tên
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.hoTenKH)
-        </dd>
-
-        <dt>
-            Email
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.emailKH)
-        </dd>
-
-        <dt>
-            Số ĐT
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.sdtKH)
-        </dd>
-
-        <dt>
-            Địa chỉ
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.diaChiKH)
-        </dd>
-
-    </dl>
+    @Html.Raw(Model.GetHtml())
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.maKH }) |
