--- a/QLTT/QLTT/Areas/Admin/Views/San/Index.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/San/Index.cshtml
@@ -59,7 +59,8 @@
                             {
                                 <td>
                                     @Html.ActionLink("Sửa", "edit", new { id = item.maSan }) |
-                                    @Html.ActionLink("Xóa", "Delete", new { id = item.maSan })
+                                    @Html.ActionLink("Xóa", "Delete", new { id = item.maSan })|
+                                    @Html.ActionLink("Chi tiết", "Details", new { id = item.maSan })
                                 </td>
                             }
                         </tr>
