--- a/QLTT/QLTT/Areas/Admin/Views/NhanVien/Details.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/NhanVien/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model QLTT.Models.NhanVien
+﻿@model Test.Composite.BookingInfoComposite
 
 @{
     ViewBag.Title = "Details";
@@ -9,71 +9,7 @@
 
 <div>
     <h4>tblNhanVien</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.hotenNV)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.hotenNV)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.dobNV)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.dobNV)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.diaChiNV)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.diaChiNV)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.sdtNV)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.sdtNV)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.taiKhoan)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.taiKhoan)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.matKhau)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.matKhau)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ChucVu.tenCV)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ChucVu.tenCV)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.PhongBan.tenPH)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PhongBan.tenPH)
-        </dd>
-    </dl>
+    @Html.Raw(Model.GetHtml())
 </div>
 <p>
     @Html.ActionLink("Xem", "Edit", new { id = Model.maNV }) |
